2007-01-24
Major refactoring - almost everything changed.

2006-12-11
Determining portal type based on content (if implementation provides the way to do so)

2006-12-08
Document validation workflow

2006-11-15
Added RSS support to document_folder

2006-11-08
Reading doc properties from content and from email text upon ingestion

2006-11-02
Deletion in publication workflow
Advanced search dialog for putting together search string (Google-like)

2006-11-01
Implemented basic security settings (6 policies)

2006-10-30
Removed "collaborated", added "shared"
Implemented "personal/project" security classification

2006-10-28
Added "collaborated" state to publication_workflow

2006-10-08
Fixes and implementation improvements

2006-10-02
Moved file uploading from /view form to object_exchange
Uploading new file creates a new object with most properties copied
Reorganised object actions.

2006-10-01
Too many things to describe here - refer to svn log and bugtracker on dedibox

2006-09-14
Fixed some bugs and controls, implemented publication workflow side effects, check unique identifier upon submission.
Added language and version to catalog (compatibility), updated scripts accordingly

2006-09-12
First implementation of External Document (a web page, spidered and cached)

2006-09-07
Conversion for PdfDocument

2006-09-05 BG
Extended search functions (requires SQLCatalog patch)

2006-08-30 BG
Added ImageDocument type; assigned types to group dms_document.

2006-08-26 BG
Changed way to store original filename;
Implemented listing wiki predecessors and successors

2006-08-24 BG
html display for Text, Spreadsheet and PdfDocument

2006-08-24 BG
Changed DMS Pdf File into PdfDocument (with another base class)
Done a number of small fixtures.

2008-08-17 BG
Parsing search string for extra tricks

2006-08-14 BG
Server address from preferences; dms categories from preferences and managed with parallel list field;

2006-08-13 BG
Basic email ingestion

2006-08-04 BG