@@ -99,10 +99,10 @@
                         <string>my_title</string>
                         <string>my_url_string</string>
                         <string>my_url_protocol</string>
-                        <string>my_translated_simulation_state_title</string>
                         <string>my_option_recursively</string>
                         <string>my_recursion_depth</string>
                         <string>external_processing_status_message</string>
+                        <string>my_translated_validation_state_title</string>
                       </list>
                     </value>
                 </item>
