@@ -112,10 +112,10 @@
                         <string>my_language</string>
                         <string>my_short_title</string>
                         <string>my_int_index</string>
-                        <string>my_translated_simulation_state_title</string>
                         <string>my_translated_validation_state_title</string>
                         <string>my_source_reference</string>
                         <string>external_processing_status_message</string>
+                        <string>consistency_state</string>
                       </list>
                     </value>
                 </item>
