@@ -69,15 +69,20 @@
         <item>
             <key> <string>_body</string> </key>
             <value> <string>"""\n
-called before submit to check if it is validate\n
-or if it can be validated\n
+called before submit to check if it is ok\n
+otherwise set a special variable and raise validation exception\n
 """\n
+from Products.DCWorkflow.DCWorkflow import ValidationFailed\n
 \n
 ob=state_change.object\n
 \n
-vstate=ob.getValidationState()\n
-if vstate != \'validated\':\n
-  ob.portal_workflow.doActionFor(ob, \'validate_action\')\n
+res = ob.checkConsistency()\n
+if res:\n
+  msg = str(res)\n
+  state_change.new_state.addVariable(\'consistency_state\', \'missing\')\n
+  raise ValidationFailed(msg)\n
+else:\n
+  state_change.new_state.addVariable(\'consistency_state\', \'good\')\n
 </string> </value>
         </item>
         <item>
@@ -121,9 +126,13 @@ if vstate != \'validated\':\n
                         <value>
                           <tuple>
                             <string>state_change</string>
+                            <string>Products.DCWorkflow.DCWorkflow</string>
+                            <string>ValidationFailed</string>
                             <string>_getattr_</string>
                             <string>ob</string>
-                            <string>vstate</string>
+                            <string>res</string>
+                            <string>str</string>
+                            <string>msg</string>
                           </tuple>
                         </value>
                     </item>
