@@ -56,6 +56,12 @@
               <tuple/>
             </value>
         </item>
+        <item>
+            <key> <string>var_values</string> </key>
+            <value>
+              <persistent> <string encoding="base64">AAAAAAAAAAM=</string> </persistent>
+            </value>
+        </item>
       </dictionary>
     </pickle>
   </record>
@@ -135,6 +141,36 @@
                         <string>Owner</string>
                       </tuple>
                     </value>
+                </item>
+              </dictionary>
+            </value>
+        </item>
+      </dictionary>
+    </pickle>
+  </record>
+  <record id="3" aka="AAAAAAAAAAM=">
+    <pickle>
+      <tuple>
+        <tuple>
+          <string>Persistence</string>
+          <string>PersistentMapping</string>
+        </tuple>
+        <none/>
+      </tuple>
+    </pickle>
+    <pickle>
+      <dictionary>
+        <item>
+            <key> <string>_container</string> </key>
+            <value>
+              <dictionary>
+                <item>
+                    <key> <string>comment</string> </key>
+                    <value> <string>uuuuuuuuuuu</string> </value>
+                </item>
+                <item>
+                    <key> <string>consistency_state</string> </key>
+                    <value> <string>good</string> </value>
                 </item>
               </dictionary>
             </value>
