@@ -1,7 +1,6 @@
 dms_file_interaction_workflow
 document_publication_workflow
 document_staging_workflow
-document_validation_workflow
 external_document_interaction_workflow
 external_document_publication_workflow
 external_processing_workflow
